--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,9 @@
 <resources>
 
     <!-- Base application theme. -->
+    <!--style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar"-->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <!--style name="AppTheme" parent="ThemeOverlay.AppCompat.Dark"-->
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
