--- a/app/src/main/res/layout/activity_prod_menu_add.xml
+++ b/app/src/main/res/layout/activity_prod_menu_add.xml
@@ -66,7 +66,7 @@
                 android:textColor="@color/accent" />
 
             <Spinner
-                android:id="@+id/sp_list_K1"
+                android:id="@+id/sp_user_profile_k1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             </LinearLayout>
