--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,11 +11,18 @@
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
 
+        <!--item name="android:textAppearanceMedium">@style/TextAppearance.Medium</item-->
+
         <!--item name="android:background">@color/colorBackground</item-->
 <!--
         <item name="android:windowBackground">@color/colorWindowBackground</item>
         <item name="android:colorBackground">@color/colorBackground</item>
 -->
+
+    </style>
+
+    <style name="TextAppearance.Medium" parent="android:style/TextAppearance.Medium">
+        <item name="android:textColor">@android:color/black</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
