--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -285,7 +285,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="confirm"
-            android:text="@string/button_add" />
+            android:text="@string/label_mode_add" />
 
         <Button
             android:id="@+id/bt_cancel"
@@ -293,7 +293,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="cancel"
-            android:text="@string/button_cancel" />
+            android:text="@string/label_mode_cancel" />
     </LinearLayout>
 
 
