--- a/app/src/main/res/layout/content_insulin_desc.xml
+++ b/app/src/main/res/layout/content_insulin_desc.xml
@@ -260,21 +260,21 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/button_add"
+                android:text="@string/label_mode_add"
                 android:id="@+id/bt_insulin_add"
                 android:layout_weight="1" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/button_insulin_update"
+                android:text="@string/label_mode_update"
                 android:id="@+id/bt_insulin_update"
                 android:layout_weight="1" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/button_cancel"
+                android:text="@string/label_mode_cancel"
                 android:id="@+id/bt_insulin_cancel"
                 android:layout_weight="1"
                 android:onClick="cancel" />
