--- a/app/src/main/res/layout/diary_pressure_add.xml
+++ b/app/src/main/res/layout/diary_pressure_add.xml
@@ -213,7 +213,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="confirm"
-            android:text="@string/button_add" />
+            android:text="@string/label_mode_add" />
 
         <Button
             android:id="@+id/bt_cancel"
