--- a/app/src/main/res/layout/activity_prod_menu_add.xml
+++ b/app/src/main/res/layout/activity_prod_menu_add.xml
@@ -91,6 +91,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:onClick="addProductFromAll"
                     android:text="@string/button_select_all" />
 
                 <Button
@@ -98,7 +99,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:onClick="addProduct"
+                    android:onClick="addProductFromOne"
                     android:text="@string/button_select" />
             </LinearLayout>
 
