--- a/app/src/main/res/layout/item_menu_detail.xml
+++ b/app/src/main/res/layout/item_menu_detail.xml
@@ -3,13 +3,13 @@
     android:id="@+id/insulin_glucose_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="@color/primary_brown">
+    android:background="@color/primary_brown"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/iv_droops"
@@ -45,8 +45,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="6"
-                    android:gravity="right" />
+                    android:gravity="right"
+                    android:text="6" />
 
 
             </LinearLayout>
@@ -73,54 +73,70 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:text="8:00"
-                    android:gravity="right" />
+                    android:gravity="right"
+                    android:text="8:00" />
             </LinearLayout>
 
             <LinearLayout
-                android:weightSum="100"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:orientation="horizontal"
+                    android:weightSum="100">
 
-                <TextView
-                    android:id="@+id/textView31"
-                    style="@style/TextAppearance.Medium"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="25"
-                    android:text="@string/user_k1_value"
-                    android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/textView31"
+                        style="@style/TextAppearance.Medium"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="50"
+                        android:text="@string/user_k1_value"
+                        android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/tv_K1"
-                    style="@style/TextAppearance.Medium"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="25"
-                    android:text="1.09"
-                    android:gravity="right" />
-                <TextView
-                    android:id="@+id/textView32"
-                    style="@style/TextAppearance.Medium"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="20"
-                    android:text="@string/insulin_K1_dose"
-                    android:textStyle="bold"
-                    android:layout_marginLeft="8sp" />
+                    <TextView
+                        android:id="@+id/tv_K1"
+                        style="@style/TextAppearance.Medium"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="50"
+                        android:gravity="right"
+                        android:text="1.09" />
 
-                <TextView
-                    android:id="@+id/tv_insulin_dose"
-                    style="@style/TextAppearance.Medium"
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="30"
-                    android:text="12"
-                    android:gravity="right" />
+                    android:layout_weight="1"
+                    android:orientation="horizontal"
+                    android:weightSum="100">
+
+                    <TextView
+                        android:id="@+id/textView32"
+                        style="@style/TextAppearance.Medium"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="8sp"
+                        android:layout_weight="40"
+                        android:text="@string/insulin_K1_dose"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/tv_insulin_dose"
+                        style="@style/TextAppearance.Medium"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="60"
+                        android:gravity="right"
+                        android:text="12" />
+                </LinearLayout>
+
             </LinearLayout>
-
 
 
             <LinearLayout
@@ -142,13 +158,15 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical">
+
                     <TextView
                         android:id="@+id/textView33"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/menu_add_label_prot"
                         android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:textColor="@color/accent"/>
+                        android:textColor="@color/accent" />
+
                     <TextView
                         android:id="@+id/tv_prod_prot"
                         android:layout_width="match_parent"
@@ -163,6 +181,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical">
+
                     <TextView
                         android:id="@+id/textView35"
                         android:layout_width="match_parent"
@@ -170,6 +189,7 @@
                         android:text="@string/menu_add_label_fats"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:textColor="@color/accent" />
+
                     <TextView
                         android:id="@+id/tv_prod_fat"
                         android:layout_width="match_parent"
@@ -184,6 +204,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical">
+
                     <TextView
                         android:id="@+id/textView37"
                         android:layout_width="match_parent"
@@ -191,6 +212,7 @@
                         android:text="@string/menu_add_label_carb"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:textColor="@color/accent" />
+
                     <TextView
                         android:id="@+id/tv_prod_carb"
                         android:layout_width="match_parent"
@@ -206,6 +228,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical">
+
                     <TextView
                         android:id="@+id/textView39"
                         android:layout_width="match_parent"
@@ -213,6 +236,7 @@
                         android:text="@string/menu_add_label_gi"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:textColor="@color/accent" />
+
                     <TextView
                         android:id="@+id/tv_prod_gi"
                         android:layout_width="match_parent"
@@ -227,6 +251,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical">
+
                     <TextView
                         android:id="@+id/textView41"
                         android:layout_width="match_parent"
@@ -234,6 +259,7 @@
                         android:text="@string/menu_add_label_xe"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:textColor="@color/accent" />
+
                     <TextView
                         android:id="@+id/tv_prod_xe"
                         android:layout_width="match_parent"
@@ -244,7 +270,6 @@
                 </LinearLayout>
 
             </LinearLayout>
-
 
 
             <LinearLayout
@@ -258,8 +283,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:singleLine="true"
                     android:hint="@string/action_comment"
+                    android:singleLine="true"
                     android:text="..." />
 
             </LinearLayout>
@@ -271,5 +296,5 @@
         style="@android:style/TextAppearance.Medium"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@drawable/divider"/>
+        android:background="@drawable/divider" />
 </LinearLayout>
