prepare to add eating to action list

--- a/app/src/main/res/layout/diary_menu_add.xml
+++ b/app/src/main/res/layout/diary_menu_add.xml
@@ -114,6 +114,8 @@
                 android:layout_gravity="center_horizontal"
                 android:text="@string/glucose_add_label_notes"
                 android:textAppearance="?android:attr/textAppearanceMedium"
+                style="@android:style/TextAppearance.Medium"
+                android:textStyle="bold"
                 android:textColor="@color/accent" />
 
             <Spinner
