--- a/app/src/main/res/layout/diary_menu_add.xml
+++ b/app/src/main/res/layout/diary_menu_add.xml
@@ -136,7 +136,7 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/et_inject_comment"
+                android:id="@+id/et_comment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
