--- a/app/src/main/res/layout/item_blood_pressure.xml
+++ b/app/src/main/res/layout/item_blood_pressure.xml
@@ -25,6 +25,35 @@
             android:paddingRight="@dimen/activity_horizontal_margin">
 
 
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+
+                <TextView
+                    android:id="@+id/textView3"
+                    style="@android:style/TextAppearance.Small"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:text="@string/insulin_inject_time"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tv_time"
+                    style="@android:style/TextAppearance.Small"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:text="8:00"
+                    android:gravity="right" />
+            </LinearLayout>
+
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -46,7 +75,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="right"
-                    android:text="120" />
+                    android:text="120"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tv_divider_pressure"
@@ -61,7 +91,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="80" />
+                    android:text="80"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tv_pressure_unit"
@@ -79,35 +110,9 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-
-                <TextView
-                    android:id="@+id/textView3"
-                    style="@android:style/TextAppearance.Medium"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:text="@string/insulin_inject_time"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/tv_time"
-                    style="@android:style/TextAppearance.Medium"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:ems="10"
-                    android:text="8:00"
-                    android:gravity="right" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
                 <TextView
                     android:id="@+id/tv_comment"
-                    style="@android:style/TextAppearance.Medium"
+                    style="@android:style/TextAppearance.Small"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -117,7 +122,7 @@
 
                 <TextView
                     android:id="@+id/tv_notes"
-                    style="@android:style/TextAppearance.Medium"
+                    style="@android:style/TextAppearance.Small"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:singleLine="true"
