--- a/app/src/main/res/layout/item_insulin_glucose.xml
+++ b/app/src/main/res/layout/item_insulin_glucose.xml
@@ -23,7 +23,31 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingRight="@dimen/activity_horizontal_margin">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
+
+                <TextView
+                    android:id="@+id/textView3"
+                    style="@android:style/TextAppearance.Small"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:text="@string/insulin_inject_time"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tv_time"
+                    style="@android:style/TextAppearance.Small"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:text="8:00"
+                    android:gravity="right" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -46,7 +70,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="6"
-                    android:textAlignment="textEnd" />
+                    android:textAlignment="textEnd"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tv_glucose_unit"
@@ -59,31 +84,7 @@
 
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
 
-
-                <TextView
-                    android:id="@+id/textView3"
-                    style="@android:style/TextAppearance.Medium"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:text="@string/insulin_inject_time"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/tv_time"
-                    style="@android:style/TextAppearance.Medium"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:ems="10"
-                    android:text="8:00"
-                    android:gravity="right" />
-            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -92,7 +93,7 @@
 
                 <TextView
                     android:id="@+id/tv_comment"
-                    style="@android:style/TextAppearance.Medium"
+                    style="@android:style/TextAppearance.Small"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -102,7 +103,7 @@
 
                 <TextView
                     android:id="@+id/tv_notes"
-                    style="@android:style/TextAppearance.Medium"
+                    style="@android:style/TextAppearance.Small"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:singleLine="true"
