--- a/app/src/main/res/layout/item_blood_pressure.xml
+++ b/app/src/main/res/layout/item_blood_pressure.xml
@@ -35,7 +35,7 @@
 
                 <TextView
                     android:id="@+id/textView3"
-                    style="@android:style/TextAppearance.Small"
+                    style="@style/TextAppearance.Small"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
@@ -44,7 +44,7 @@
 
                 <TextView
                     android:id="@+id/tv_time"
-                    style="@android:style/TextAppearance.Small"
+                    style="@style/TextAppearance.Small"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
