--- a/app/src/main/res/layout/item_insulin_glucose.xml
+++ b/app/src/main/res/layout/item_insulin_glucose.xml
@@ -31,7 +31,7 @@
 
                 <TextView
                     android:id="@+id/textView3"
-                    style="@android:style/TextAppearance.Small"
+                    style="@style/TextAppearance.Small"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
@@ -40,7 +40,7 @@
 
                 <TextView
                     android:id="@+id/tv_time"
-                    style="@android:style/TextAppearance.Small"
+                    style="@style/TextAppearance.Small"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -93,7 +93,7 @@
 
                 <TextView
                     android:id="@+id/tv_comment"
-                    style="@android:style/TextAppearance.Small"
+                    style="@style/TextAppearance.Small.Comment"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -103,7 +103,7 @@
 
                 <TextView
                     android:id="@+id/tv_notes"
-                    style="@android:style/TextAppearance.Small"
+                    style="@style/TextAppearance.Small.Comment"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:singleLine="true"
